--- a/styles.css
+++ b/styles.css
@@ -7,21 +7,21 @@
 /* Fontes */
 @font-face {
   font-family: 'Axiforma';
-  src: url('/fonts/Axiforma-Regular.woff2') format('woff2');
+  src: url('./fonts/Axiforma-Regular.woff2') format('woff2');
   font-weight: 400;
   font-style: normal;
   font-display: optional;
 }
 @font-face {
   font-family: 'Axiforma';
-  src: url('/fonts/Axiforma-Bold.woff2') format('woff2');
+  src: url('./fonts/Axiforma-Bold.woff2') format('woff2');
   font-weight: 700;
   font-style: normal;
   font-display: optional;
 }
 @font-face {
   font-family: 'Acumin Variable Concept';
-  src: url('/fonts/Acumin-Pro.woff2') format('woff2');
+  src: url('./fonts/Acumin-Pro.woff2') format('woff2');
   font-weight: 100 900;
   font-style: normal;
   font-display: optional;
